fixed invisible pointers

--- a/src/App.css
+++ b/src/App.css
@@ -24,30 +24,6 @@ a {
   cursor: pointer;
 }
 
-a:link {
-  color: white;
-  background-color: unset;
-  text-decoration: none;
-}
-
-a:visited {
-  color: white;
-  background-color: unset;
-  text-decoration: none;
-}
-
-a:hover {
-  color: white;
-  background-color: unset;
-  text-decoration: none;
-}
-
-a:active {
-  color: white;
-  background-color: unset;
-  text-decoration: none;
-}
-
 b {
   font-weight: 700;
 }
