--- a/src/components/04 home-page/03 cases/cases.css
+++ b/src/components/04 home-page/03 cases/cases.css
@@ -1,3 +1,27 @@
+a:link {
+  color: white;
+  background-color: unset;
+  text-decoration: none;
+}
+
+a:visited {
+  color: white;
+  background-color: unset;
+  text-decoration: none;
+}
+
+a:hover {
+  color: white;
+  background-color: unset;
+  text-decoration: none;
+}
+
+a:active {
+  color: white;
+  background-color: unset;
+  text-decoration: none;
+}
+
 .default-inner-section {
   align-items: unset !important;
 }
